adicionado componente Post e Footer. Adicionado imagens relacionada ao projeto e jsconfig.json. Ajuste na configuração do vite.config.js

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,10 +4,9 @@
       "paths": {
         "@components/*": ["components/*"],
         "@assets/*": ["assets/*"],
-       /*  "@utils/*": ["utils/*"],
-        "@styles/*": ["styles/*"] */
+        "@json/*": ["json/*"],
       }
     },
-    "include": ["src"]
+    "include": ["src"],
   }
   
